Revision history for {{$dist->name}}

{{$NEXT}}

2.06      2016-05-10 21:25:31 -0400

2.05      2016-05-10 10:17:15 -0400
  - Require [Author::Plicease] 2.05

2.04      2016-05-03 06:10:01 -0400
  - Require [Author::Plicease] 2.04

2.03      2016-04-24 19:08:40 -0400
  - Dist::Zilla 6.x compatability

2.02      2016-03-08 09:52:18 -0500
  - Move the mint mechanisms into the non bundle dist

2.01      2016-03-08 09:19:07 -0500
  - Spun off most of the Author::Plicease::* plugins (except Init2.pm)
    into Dist::Zilla::Plugin::Author::Plicease

2.00      2016-02-11 04:00:00 -0500
  - Require Dist::Zilla::App::Command::aliendeps

1.99      2016-02-04 11:02:04 -0500
  - Bump [Alien] prereq to 0.023

1.98      2016-01-29 09:58:40 -0500
  - Add alien_bin_requires as diagnostic

1.97      2016-01-28 12:08:31 -0500
  - Add [Alien] as a prereq
  - Add [PkgVersion::Block] as a prereq where available
  - Add dictionary for additional correct words

1.96      2016-01-16 16:28:30 -0500
  - Fixes for generated .appveyor.yml

1.95      2016-01-06 14:47:45 -0500
  - Support for appveyor

1.94      2015-12-20 15:15:03 -0700
  - skip xt/release/pod_coverage.t on 5.8
    I've been getting false positives on Alien::Base
    based distros from this test on 5.8 only

1.93      2015-12-13 04:38:01 -0500
  - require Test::Exit 0.11 if used
  - new dists default to travis_status
  - new dists require at least the same version of [@Author::Plicease]

1.92      2015-12-11 13:02:36 -0500
  - rework t/00_diag.t

1.91      2015-12-09 11:41:11 -0500
  - added travis_user option to [@Author::Plicease] and [Author::Plicease::MarkDownCleanup]

1.90      2015-11-24 21:07:35 -0500
  - Created [Author::Plicease::MakeMaker] in attempt to deal
    with File::ShareDir madness.
  - Created [Author::Plicease::DevShare] also to help deal
    with File::ShareDir madness.

1.89      2015-11-22 14:28:47 -0500
  - Minting profile creates t/01_use.t instead of t/use.t which is almost