@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
 
 2.06      2016-05-10 21:25:31 -0400
+  - Fixed bug where minting profile was failing on fresh install
 
 2.05      2016-05-10 10:17:15 -0400
   - Require [Author::Plicease] 2.05
